--- a/index.html
+++ b/index.html
@@ -9,44 +9,46 @@
     <img id="logo" src="https://i.ibb.co/fDnwBFK/Copy-of-B-Logo-Black.png" alt="logo">
     <nav id="navbar">
       <a href="#home">HOME</a>
-      <a href="#features">FEATURES</a>
-      <a href="#community">COMMUNITY</a>
-      <a href="#our-story">OUR STORY</a>
+      <a href="#featuresMarg">FEATURES</a>
+      <a href="#communityMarg">COMMUNITY</a>
+      <a href="#storyMarg">OUR STORY</a>
     </nav>
     <a href="https://apps.apple.com/us/app/barebones-fitness/id1629365723">
       <button id="launch-btn">Launching Soon</button>
     </a>
   </header>
   <!-- Sections will go here -->
-  <section id="home" class="hidden">
+  <section id="home">
     <div class="home-left">
       <img src="https://i.ibb.co/VCKmGFK/Barebones-Logo-White.png" alt="Barebones logo" id="home-logo">
       <p class="motto">Fitness without the Distraction</p>
     </div>
-    <div class="home-right">
+    <div class="home-right" >
       <img src="https://uploads-ssl.webflow.com/6352b43935e754b0270fcaef/6352bd30574620e425f01892_banner%20bk2.png" alt="Blurred background" class="blur-img">
       <img src="https://i.ibb.co/6byFF7b/barebones.png" alt="iPhone" class="iphone-img">
     </div>
   </section>  
+  <section id="featuresMarg"></section>
   <section id="features" class="hidden">
     <h2>FEATURES</h2>
-    <p>BAREBONES houses a blend of functionality with its Feed, Search, Upload, Notes, and Profile tabs, offering a seamless user experience. Each workout post comes with a customizable template, allowing users to copy, paste, sort, and save notes straight from posts.</p>
+    <p class="upper">BAREBONES houses a blend of functionality with its Feed, Search, Upload, Notes, and Profile tabs, offering a seamless user experience. Each workout post comes with a customizable template, allowing users to copy, paste, sort, and save notes straight from posts.</p>
     <div class="card-container">
       <div class="card">
-        <h3>All-In-One Fitness Social Media App</h3>
+        <h3 class="card-header">All-In-One Fitness Social Media App</h3>
         <p>Our platform amalgamates the world of fitness with the interactivity of social media, creating an all-encompassing space for fitness enthusiasts and certified trainers alike. Connect, share, and grow together in your fitness journey with BAREBONES.</p>
       </div>
       <div class="card">
-        <h3>Customize Your Workouts</h3>
+        <h3 class="card-header">Customize Your Workouts</h3>
         <p>Our platform allows users to tailor their own workout routines, offering the freedom and flexibility to build a fitness plan that aligns with individual goals. Whether you're a novice or a seasoned athlete, BAREBONES turns your workout aspirations into achievable actions.</p>
       </div>
       <div class="card">
-        <h3>Creator-Centric Subscription Service</h3>
+        <h3 class="card-header">Creator-Centric Subscription Service</h3>
         <p>BAREBONES takes a creator-focused approach, offering a subscription service that benefits both fitness enthusiasts and professional trainers. By subscribing, users gain access to exclusive content, unique workout plans, and expert advice from certified trainers.</p>
       </div>
     </div>
   </section>  
   <br><br><br><br><br>
+  <section id="communityMarg"></section>
   <section id="community" class="hidden">
     <div class="community-left">
       <img class="blur-img-community" src="https://uploads-ssl.webflow.com/6352b43935e754b0270fcaef/6352bd91776938e3a6c482aa_posts%20in%20secs%20bk.png" alt="blurred fitness image">
@@ -75,6 +77,7 @@
       </div>
     </div>
   </section>  
+  <section id="storyMarg"></section>
   <section id="our-story" class="hidden">
     <h2>OUR STORY</h2>
     <p>BAREBONES was born out of a passion for fitness and a vision to connect individuals on their health journeys. We saw a gap in the fitness market for an interactive platform that combines the power of social media with the practicality of a fitness app. Our aim was to build a community that promotes shared learning, growth, and a love for fitness.</p>
