changes made as discussed

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </a>
   </header>
   <!-- Sections will go here -->
-  <section id="home" class="hidden">
+  <section id="home">
     <div class="home-left">
       <img src="https://i.ibb.co/VCKmGFK/Barebones-Logo-White.png" alt="Barebones logo" id="home-logo">
       <p class="motto">Fitness without the Distraction</p>
@@ -132,6 +132,7 @@
     <div id="footer-bottom">
       <p id="copyright">©2023 Barebones Fitness, Inc. All Rights Reserved.</p>
     </div>
-  </footer>  
+  </footer>
+  
 </body>
 </html>
