--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <header id="header">
-    <img id="logo" src="https://i.ibb.co/fDnwBFK/Copy-of-B-Logo-Black.png" alt="logo">
+    <img id="logo" src="https://i.ibb.co/5FdjzXs/Barebones-Logo-Black-2.png" alt="logo">
     <nav id="navbar">
       <a href="#home">HOME</a>
       <a href="#features">FEATURES</a>
@@ -14,14 +14,13 @@
       <a href="#our-story">OUR STORY</a>
     </nav>
     <a href="https://apps.apple.com/us/app/barebones-fitness/id1629365723">
-      <button id="launch-btn">Launching Soon</button>
+      <button id="launch-btn">Download Now</button>
     </a>
   </header>
   <!-- Sections will go here -->
-  <section id="home" class="hidden">
+  <section id="home">
     <div class="home-left">
-      <img src="https://i.ibb.co/VCKmGFK/Barebones-Logo-White.png" alt="Barebones logo" id="home-logo">
-      <p class="motto">Fitness without the Distraction</p>
+      <p class="motto">Fitness Without the Distractions</p>
     </div>
     <div class="home-right">
       <img src="https://uploads-ssl.webflow.com/6352b43935e754b0270fcaef/6352bd30574620e425f01892_banner%20bk2.png" alt="Blurred background" class="blur-img">
@@ -30,23 +29,22 @@
   </section>  
   <section id="features" class="hidden">
     <h2>FEATURES</h2>
-    <p>BAREBONES houses a blend of functionality with its Feed, Search, Upload, Notes, and Profile tabs, offering a seamless user experience. Each workout post comes with a customizable template, allowing users to copy, paste, sort, and save notes straight from posts.</p>
+    <p class="features-description">Barebones houses a blend of functionality and seamless user experience.  Allowing users to share their workouts, connect with others, and build their own fitness community. Content is easily customizable and allows users to categorize and save workouts directly to their phone and save for later.</p>
     <div class="card-container">
       <div class="card">
         <h3>All-In-One Fitness Social Media App</h3>
-        <p>Our platform amalgamates the world of fitness with the interactivity of social media, creating an all-encompassing space for fitness enthusiasts and certified trainers alike. Connect, share, and grow together in your fitness journey with BAREBONES.</p>
+        <p class="features-card-description">Barebones incorporates the world of fitness with the interactivity of social media, creating an all-encompassing space for fitness enthusiasts and certified trainers alike. Connect, share, and grow together in your fitness journey with BAREBONES.</p>
       </div>
       <div class="card">
         <h3>Customize Your Workouts</h3>
-        <p>Our platform allows users to tailor their own workout routines, offering the freedom and flexibility to build a fitness plan that aligns with individual goals. Whether you're a novice or a seasoned athlete, BAREBONES turns your workout aspirations into achievable actions.</p>
+        <p class="features-card-description">Barebones allows users to tailor their own workout routines, offering the freedom and flexibility to build a fitness plan that aligns with individual goals. Whether you're a beginner or a seasoned athlete, Barebones turns turns your workout aspirations into achievable actions.</p>
       </div>
       <div class="card">
         <h3>Creator-Centric Subscription Service</h3>
-        <p>BAREBONES takes a creator-focused approach, offering a subscription service that benefits both fitness enthusiasts and professional trainers. By subscribing, users gain access to exclusive content, unique workout plans, and expert advice from certified trainers.</p>
+        <p class="features-card-description">Barebones takes a creator-focused approach, offering a subscription service that benefits both fitness enthusiasts and professional trainers. By subscribing, users gain access to exclusive content, unique workout plans, and expert advice from certified trainers.</p>
       </div>
     </div>
   </section>  
-  <br><br><br><br><br>
   <section id="community" class="hidden">
     <div class="community-left">
       <img class="blur-img-community" src="https://uploads-ssl.webflow.com/6352b43935e754b0270fcaef/6352bd91776938e3a6c482aa_posts%20in%20secs%20bk.png" alt="blurred fitness image">
@@ -54,68 +52,72 @@
     </div>
     <div class="community-right">
       <h2 class="community-title">COMMUNITY</h2>
-      <p class="community-description">Barebones is offering a creator-centric subscription service that allows individuals to charge for premium content. Subscribers will have exclusive access to workouts, meal plans, Q/A, & more. Apply now and create your own community!</p>
+      <p class="community-description">Barebones allows individuals to charge for premium content. Subscribers will have exclusive access to workouts, meal plans, Q/A, & more. Apply now and create your own community!</p>
       <div class="mini-section">
         <h3 class="mini-section-title">How it works</h3>
         <ul class="mini-section-points">
           <!-- Your bullet points go here -->
-          <li>Create a BAREBONES account.</li>
-          <li>Apply to become a BAREBONES athlete.</li>
-          <li>Submit your credentials.</li>
-          <li>Get verified.</li>
+          <li>Create a BAREBONES account</li>
+          <li>Apply to become a BAREBONES athlete</li>
+          <li>Submit your credentials</li>
+          <li>Get verified</li>
         </ul>
       </div>
       <div class="mini-section">
-        <h3 class="mini-section-title">The Details</h3>
+        <h3 class="mini-section-title">The details</h3>
         <ul class="mini-section-points">
           <li>Once you are verified, you will receive a designated icon to showcase your community status.</li>
           <li>You can build out a subscribable interface to engage with your followers.</li>
-          <ul><li>The subscription fee and information are entirely up to the discretion of content creator.</li></ul>
+          <li>Subscription fees are entirely up to the discretion of content creator.</li>
         </ul>
       </div>
     </div>
   </section>  
   <section id="our-story" class="hidden">
     <h2>OUR STORY</h2>
-    <p>BAREBONES was born out of a passion for fitness and a vision to connect individuals on their health journeys. We saw a gap in the fitness market for an interactive platform that combines the power of social media with the practicality of a fitness app. Our aim was to build a community that promotes shared learning, growth, and a love for fitness.</p>
+    <p>Barebones was born out of a passion for fitness and a vision to connect individuals on their health journeys. We saw a gap in the fitness market for an interactive platform that combines the power of social media with the practicality of a fitness app. Our aim was to build a community that promotes shared learning, growth, and a love for fitness.</p>
     <div id="story-images">
       <div class="story">
         <img src="https://i.ibb.co/Z1KCrcD/51124715-c424-4eb0-997e-4316b97f8482.jpg" alt="Chloe Gaynor">
         <div class="overlay">
-          <h3>Chloe Gaynor</h3>
           <p class="description">Description of Chloe Gaynor</p>
         </div>
+        <h3>Chloe Gaynor</h3>
       </div>
       <div class="story" >
         <img src="https://i.ibb.co/KwyGS4x/396f3c13-6ea8-4f2d-9ff1-22bc28ef3c2f.jpg" alt="Erika Ramirez">
         <div class="overlay">
-          <h3>Erika Ramirez</h3>
           <p class="description">Description of Erika Ramirez</p>
         </div>
+        <h3>Erika Ramirez</h3>
       </div>
       <div class="story">
         <img src="https://i.ibb.co/1dsLwFs/0045a00d-b160-4c1d-8610-bb9cf7e087e9.jpg" alt="Grace Hali">
         <div class="overlay">
-          <h3>Grace Hali</h3>
           <p class="description">Description of Grace Hali</p>
         </div>
+        <h3>Grace Hali</h3>
       </div>
       <div class="story">
         <img src="https://i.ibb.co/6vKr58r/386e14f2-920f-4b3e-a6a4-a482af450bf0.jpg" alt="Julius Washington">
         <div class="overlay">
-          <h3>Julius Washington</h3>
           <p class="description">Description of Julius Washington</p>
         </div>
+        <h3>Julius Washington</h3>
       </div>
     </div>
-  </section>
+  </section>  
   <footer>
     <div id="footer-content">
       <div id="footer-left">
-        <img id="footer-icon" src="https://i.ibb.co/fDnwBFK/Copy-of-B-Logo-Black.png" alt="icon">
-        <a href="contact.html">Contact Us</a>
-        <a href="terms.html">Terms and Conditions</a>
-        <a href="privacy.html">Privacy Policy</a>
+        <div class="logo-container">
+          <img id="footer-icon" src="https://i.ibb.co/fDnwBFK/Copy-of-B-Logo-Black.png" alt="icon">
+        </div><br>
+        <div class="links-container">
+          <a href="contact.html">Contact Us</a>
+          <a href="terms.html">Terms and Conditions</a>
+          <a href="privacy.html">Privacy Policy</a>
+        </div>
       </div>
       <div id="footer-right">
         <h2>Be the First to Know</h2>
