Restyled the links so they stack on top in columns

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <img id="logo" src="https://i.ibb.co/5FdjzXs/Barebones-Logo-Black-2.png" alt="logo">
     <nav id="navbar">
       <a href="#home">HOME</a>
-      <a href="#features">FEATURES</a>
-      <a href="#community">COMMUNITY</a>
-      <a href="#our-story">OUR STORY</a>
+      <a href="#featuresMarg">FEATURES</a>
+      <a href="#communityMarg">COMMUNITY</a>
+      <a href="#storyMarg">OUR STORY</a>
     </nav>
     <a href="https://apps.apple.com/us/app/barebones-fitness/id1629365723">
       <button id="launch-btn">Download Now</button>
@@ -27,6 +27,7 @@
       <img src="https://i.ibb.co/6byFF7b/barebones.png" alt="iPhone" class="iphone-img">
     </div>
   </section>  
+  <section id="featuresMarg"></section>
   <section id="features" class="hidden">
     <h2>FEATURES</h2>
     <p class="features-description">Barebones houses a blend of functionality and seamless user experience.  Allowing users to share their workouts, connect with others, and build their own fitness community. Content is easily customizable and allows users to categorize and save workouts directly to their phone and save for later.</p>
@@ -45,6 +46,7 @@
       </div>
     </div>
   </section>  
+  <section id="communityMarg"></section>
   <section id="community" class="hidden">
     <div class="community-left">
       <img class="blur-img-community" src="https://uploads-ssl.webflow.com/6352b43935e754b0270fcaef/6352bd91776938e3a6c482aa_posts%20in%20secs%20bk.png" alt="blurred fitness image">
@@ -73,6 +75,7 @@
       </div>
     </div>
   </section>  
+  <section id="storyMarg"></section>
   <section id="our-story" class="hidden">
     <h2>OUR STORY</h2>
     <p>Barebones was born out of a passion for fitness and a vision to connect individuals on their health journeys. We saw a gap in the fitness market for an interactive platform that combines the power of social media with the practicality of a fitness app. Our aim was to build a community that promotes shared learning, growth, and a love for fitness.</p>
