Started working on dropdown menu. Functionality is there jsut need to make it prettier

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
       <a href="#featuresMarg">FEATURES</a>
       <a href="#communityMarg">COMMUNITY</a>
       <a href="#storyMarg">OUR STORY</a>
+       <!-- List for the dropdown menu -->
+       <input type="checkbox" id="menu-bar">
+       <label for="menu-bar">Menu</label>
+      <ul class="testClass">
+        <li>t1</li>
+        <li>t2</li>
+        <li>t3</li>
+        <li>t4</li>
+      </ul>
     </nav>
     <a href="https://apps.apple.com/us/app/barebones-fitness/id1629365723">
       <button id="launch-btn">Download Now</button>
