Centered everything for the dropdown menu. Just need to update skeleton functionality to fix website.

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
        <input type="checkbox" id="menu-bar">
        <label for="menu-bar">Menu</label>
       <ul class="testClass">
-        <li>t1</li>
-        <li>t2</li>
-        <li>t3</li>
-        <li>t4</li>
+        <li>Home</li>
+        <li>Features</li>
+        <li>Community</li>
+        <li>Our Story</li>
       </ul>
     </nav>
     <a href="https://apps.apple.com/us/app/barebones-fitness/id1629365723">
