Chaged bullet text in Community section

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
       <div class="mini-section">
         <h3 class="mini-section-title">The details</h3>
         <ul class="mini-section-points">
-          <li>Once you are verified, you will receive a designated icon to showcase your community status.</li>
-          <li>You can build out a subscribable interface to engage with your followers.</li>
-          <li>Subscription fees are entirely up to the discretion of content creator.</li>
+          <li>Once verified, you will receive a designated icon to showcase your community status</li>
+          <li>You can build out a subscribable interface to engage with your followers</li>
+          <li>Subscription fees are entirely up to the discretion of content creator</li>
         </ul>
       </div>
     </div>
