Removed overlays in Our Story section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="card-container">
       <div class="card">
         <h3>All-In-One Fitness Social Media App</h3>
-        <p class="features-card-description">Barebones incorporates the world of fitness with the interactivity of social media, creating an all-encompassing space for fitness enthusiasts and certified trainers alike. Connect, share, and grow together in your fitness journey with BAREBONES.</p>
+        <p class="features-card-description">Barebones incorporates the world of fitness with the interactivity of social media, creating an all-encompassing space for fitness enthusiasts and certified trainers alike. Connect, share, and grow together in your fitness journey with Barebones.</p>
       </div>
       <div class="card">
         <h3>Customize Your Workouts</h3>
