Added divs for CSuite exec listing positions below images. Styling Required

--- a/index.html
+++ b/index.html
@@ -91,27 +91,43 @@
     <h2>OUR STORY</h2>
     <p>Barebones was born out of a passion for fitness and a vision to connect individuals on their health journeys. We saw a gap in the fitness market for an interactive platform that combines the power of social media with the practicality of a fitness app. Our aim was to build a community that promotes shared learning, growth, and a love for fitness.</p>
     <div id="story-images">
-      <div class="story">
-        <img src="https://i.ibb.co/Z1KCrcD/51124715-c424-4eb0-997e-4316b97f8482.jpg" alt="Chloe Gaynor">
-        <div class="overlay">
-          <p class="description">Description of Chloe Gaynor</p>
+      <div class="CSuite">
+        <div class="story">
+          <img src="https://i.ibb.co/Z1KCrcD/51124715-c424-4eb0-997e-4316b97f8482.jpg" alt="Chloe Gaynor">
+          <div class="overlay">
+            <p class="description">Description of Chloe Gaynor</p>
+          </div>
+          <h3>Chloe Gaynor</h3>
         </div>
-        <h3>Chloe Gaynor</h3>
-      </div>
-      <div class="story" >
-        <img src="https://i.ibb.co/KwyGS4x/396f3c13-6ea8-4f2d-9ff1-22bc28ef3c2f.jpg" alt="Erika Ramirez">
-        <div class="overlay">
-          <p class="description">Description of Erika Ramirez</p>
+        <div class="CSuiteTitles">
+          <h4>CoFounder and CEO</h4>
         </div>
-        <h3>Erika Ramirez</h3>
       </div>
-      <div class="story">
-        <img src="https://i.ibb.co/1dsLwFs/0045a00d-b160-4c1d-8610-bb9cf7e087e9.jpg" alt="Grace Hali">
-        <div class="overlay">
-          <p class="description">Description of Grace Hali</p>
+      <div class="CSuite">
+        <div class="story" >
+          <img src="https://i.ibb.co/KwyGS4x/396f3c13-6ea8-4f2d-9ff1-22bc28ef3c2f.jpg" alt="Erika Ramirez">
+          <div class="overlay">
+            <p class="description">Description of Erika Ramirez</p>
+          </div>
+          <h3>Erika Ramirez</h3>
         </div>
-        <h3>Grace Hali</h3>
+        <div class="CSuiteTitles">
+          <h4>CoFounder and CMO</h4>
+        </div>
       </div>
+      <div class="CSuite">
+        <div class="story">
+          <img src="https://i.ibb.co/1dsLwFs/0045a00d-b160-4c1d-8610-bb9cf7e087e9.jpg" alt="Grace Hali">
+          <div class="overlay">
+            <p class="description">Description of Grace Hali</p>
+          </div>
+          <h3>Grace Hali</h3>
+        </div>
+        <div class="CSuiteTitles">
+          <h4>CoFounder and COO</h4>
+        </div>
+      </div>
+      <div class="CSuite">
       <div class="story">
         <img src="https://i.ibb.co/6vKr58r/386e14f2-920f-4b3e-a6a4-a482af450bf0.jpg" alt="Julius Washington">
         <div class="overlay">
@@ -119,6 +135,10 @@
         </div>
         <h3>Julius Washington</h3>
       </div>
+      <div class="CSuiteTitles">
+        <h4>CTO</h4>
+      </div>
+    </div>
     </div>
   </section>  
   <footer>
