--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </section>  
   <section id="featuresMarg"></section>
   <section id="features" class="hidden">
-    <h2>FEATURES</h2>
+    <h2>Features</h2>
     <p class="features-description">Barebones houses a blend of functionality and seamless user experience.  Allowing users to share their workouts, connect with others, and build their own fitness community. Content is easily customizable and allows users to categorize and save workouts directly to their phone and save for later.</p>
     <div class="card-container">
       <div class="card">
@@ -97,10 +97,10 @@
           <div class="overlay">
             <p class="description">Description of Chloe Gaynor</p>
           </div>
-          <h3>Chloe Gaynor</h3>
         </div>
         <div class="CSuiteTitles">
-          <h4>CoFounder and CEO</h4>
+          <h3>Chloe Gaynor</h3>
+          <h4>Founder and CEO</h4>
         </div>
       </div>
       <div class="CSuite">
@@ -109,10 +109,10 @@
           <div class="overlay">
             <p class="description">Description of Erika Ramirez</p>
           </div>
-          <h3>Erika Ramirez</h3>
         </div>
         <div class="CSuiteTitles">
-          <h4>CoFounder and CMO</h4>
+          <h3>Erika Ramirez</h3>
+          <h4>Co-founder and CMO</h4>
         </div>
       </div>
       <div class="CSuite">
@@ -121,10 +121,10 @@
           <div class="overlay">
             <p class="description">Description of Grace Hali</p>
           </div>
-          <h3>Grace Hali</h3>
         </div>
         <div class="CSuiteTitles">
-          <h4>CoFounder and COO</h4>
+          <h3>Grace Hali</h3>
+          <h4>Co-founder and COO</h4>
         </div>
       </div>
       <div class="CSuite">
@@ -133,9 +133,9 @@
         <div class="overlay">
           <p class="description">Description of Julius Washington</p>
         </div>
-        <h3>Julius Washington</h3>
       </div>
       <div class="CSuiteTitles">
+        <h3>Julius Washington</h3>
         <h4>CTO</h4>
       </div>
     </div>
