Header and navbar changes made

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- Sections will go here -->
   <section id="home">
     <div class="home-left">
-      <p class="motto">"Fitness Without the Distractions"</p>
+      <p class="motto">Fitness Without the Distractions</p>
     </div>
     <div class="home-right">
       <img src="https://uploads-ssl.webflow.com/6352b43935e754b0270fcaef/6352bd30574620e425f01892_banner%20bk2.png" alt="Blurred background" class="blur-img">
